--- a/www/style/sepia.css-tablet.css
+++ b/www/style/sepia.css-tablet.css
@@ -257,6 +257,7 @@ body {
 .pageContentWrapper.Microblog #divBlogPost #divPostSubmit #chkTweet {  display:none;  }
 .pageContentWrapper.Microblog #divBlogPost #divPostText #txtContent {
   font-size:150%;
+  line-height:120%;
   margin-top:10px;
   width:97%;
   height:130px;
